scripts/kfp/templates/minio-proxy-template.yaml
# Reverse proxy for MinIO based on https://min.io/docs/minio/linux/integrations/setup-nginx-proxy-with-minio.html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-proxy
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-proxy
  template:
    metadata:
      labels:
        app: minio-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx-conf
        configMap:
          name: minio-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 80
  selector:
    app: minio-proxy
  sessionAffinity: None
  type: ClusterIP
