scripts/kfp/templates/service.yaml
# minio nodeport service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio-nodeport
spec:
  ports:
  - name: api
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
    application-crd-id: kubeflow-pipelines
  sessionAffinity: None
  type: NodePort
---
# minio UI service
apiVersion: v1
kind: Service
metadata:
  name: minio-ui
spec:
  ports:
  - name: dashboard
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
    application-crd-id: kubeflow-pipelines
  type: ClusterIP
---
#  MYSQL NodePort
apiVersion: v1
kind: Service
metadata:
  labels:
    application-crd-id: kubeflow-pipelines
  name: mysql-nodeport
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
    application-crd-id: kubeflow-pipelines
  sessionAffinity: None
  type: NodePort
